# matrix

./: .gitignore  CMakeLists.txt  Dockerfile  Readme.md
.devcontainer/: devcontainer.json
.github/workflows/: release.yml
linter/: .clang-format
src/: matrix.c  matrix.h  matrix_private.h
unit_tests/: matrix_accessors_tcases.c  matrix_calc_complements_tcases.c  matrix_determinant_tcases.c  matrix_eq_tcases.c  matrix_get_array_tcases.c  matrix_inverse_matrix_tcases.c  matrix_memory_tcases.c  matrix_mult_number_tcases.c  matrix_mult_tcases.c  matrix_sub_tcases.c  matrix_sum_tcases.c  matrix_transpose_tcases.c  tests.h  tests_main.c
unit_tests/test_cases/: s21_calc_complements_tcases.xlsx  s21_create_matrix_tcases.xlsx  s21_determinant_tcases.xlsx  s21_eq_matrix_tcases.xlsx  s21_inverse_matrix_tcases.xlsx  s21_mult_matrix_tcases.xlsx  s21_mult_number_tcases.xlsx  s21_sub_matrix_tcases.xlsx  s21_sum_matrix_tcases.xlsx  s21_transpose_tcases.xlsx  template.xlsx
